--- a/projects/planet/docker-compose.yml
+++ b/projects/planet/docker-compose.yml
@@ -4,19 +4,19 @@ networks:
     driver: bridge
 services:
   libpostal:
-    image: pelias/libpostal-service
+    image: mr1dsgn/libpostal-service
     container_name: pelias_libpostal
     user: "${DOCKER_USER}"
     restart: always
     ports: [ "4400:4400" ]
   schema:
-    image: pelias/schema:master
+    image: mr1dsgn/schema
     container_name: pelias_schema
     user: "${DOCKER_USER}"
     volumes:
       - "./pelias.json:/code/pelias.json"
   api:
-    image: pelias/api:master
+    image: mr1dsgn/api
     container_name: pelias_api
     user: "${DOCKER_USER}"
     restart: always
@@ -25,7 +25,7 @@ services:
     volumes:
       - "./pelias.json:/code/pelias.json"
   placeholder:
-    image: pelias/placeholder:master
+    image: mr1dsgn/placeholder
     container_name: pelias_placeholder
     user: "${DOCKER_USER}"
     restart: always
@@ -36,7 +36,7 @@ services:
       - "${DATA_DIR}:/data"
       - "./blacklist/:/data/blacklist"
   whosonfirst:
-    image: pelias/whosonfirst:master
+    image: mr1dsgn/whosonfirst
     container_name: pelias_whosonfirst
     user: "${DOCKER_USER}"
     volumes:
@@ -44,7 +44,7 @@ services:
       - "${DATA_DIR}:/data"
       - "./blacklist/:/data/blacklist"
   openstreetmap:
-    image: pelias/openstreetmap:master
+    image: mr1dsgn/openstreetmap
     container_name: pelias_openstreetmap
     user: "${DOCKER_USER}"
     volumes:
@@ -52,7 +52,7 @@ services:
       - "${DATA_DIR}:/data"
       - "./blacklist/:/data/blacklist"
   openaddresses:
-    image: pelias/openaddresses:master
+    image: mr1dsgn/openaddresses
     container_name: pelias_openaddresses
     user: "${DOCKER_USER}"
     volumes:
@@ -60,7 +60,7 @@ services:
       - "${DATA_DIR}:/data"
       - "./blacklist/:/data/blacklist"
   geonames:
-    image: pelias/geonames:master
+    image: mr1dsgn/geonames
     container_name: pelias_geonames
     user: "${DOCKER_USER}"
     volumes:
@@ -68,7 +68,7 @@ services:
       - "${DATA_DIR}:/data"
       - "./blacklist/:/data/blacklist"
   csv-importer:
-    image: pelias/csv-importer:master
+    image: mr1dsgn/csv_importer
     container_name: pelias_csv_importer
     user: "${DOCKER_USER}"
     volumes:
@@ -76,21 +76,21 @@ services:
       - "${DATA_DIR}:/data"
       - "./blacklist/:/data/blacklist"
   transit:
-    image: pelias/transit:master
+    image: mr1dsgn/transit
     container_name: pelias_transit
     user: "${DOCKER_USER}"
     volumes:
       - "./pelias.json:/code/pelias.json"
       - "${DATA_DIR}:/data"
   polylines:
-    image: pelias/polylines:master
+    image: mr1dsgn/polylines
     container_name: pelias_polylines
     user: "${DOCKER_USER}"
     volumes:
       - "./pelias.json:/code/pelias.json"
       - "${DATA_DIR}:/data"
   interpolation:
-    image: pelias/interpolation:master
+    image: mr1dsgn/interpolation
     container_name: pelias_interpolation
     user: "${DOCKER_USER}"
     restart: always
@@ -100,7 +100,7 @@ services:
       - "./pelias.json:/code/pelias.json"
       - "${DATA_DIR}:/data"
   pip:
-    image: pelias/pip-service:master
+    image: mr1dsgn/pip-service
     container_name: pelias_pip-service
     user: "${DOCKER_USER}"
     restart: always
